# rs-ezcache

./: .codespellrc  Cargo.toml  README.md
.github/workflows/: docs.yml  test.yml
examples/: _common.rs  http-multithread.rs  http.rs
scripts/: test.sh
src/: generative.rs  lib.rs
src/stores/: file_stores.rs  mod.rs
src/thread_safe/: generative.rs  mod.rs
src/thread_safe/dumb/: generative.rs  mod.rs
