[package]
name = "ezcache"
version = "0.1.0"
edition = "2021"

[dependencies]
ambassador = "0.4.1"
base64 = {version = "0.22.1", optional = true }
bincode = { version = "1.3.3", optional = true }
serde = { version = "1.0.217", optional = true }
sha2 = { version = "0.10.8", optional = true }

[features]
std = []
thread-safe = ["std", "nightly"]
file-stores = ["std", "thread-safe", "dep:base64", "dep:bincode", "dep:serde", "dep:sha2"]
nightly = []
default = ["std", "thread-safe", "file-stores"]

[dev-dependencies]
rayon = "1.10.0"
