[package]
name = "ezcache"
version = "0.1.0"
authors = ["javalsai <javalsai@proton.me>"]
description = "Easy and flexible cache library for Rust"
edition = "2021"
license = "GPL-2.0-only"
homepage = "https://github.com/javalsai/rs-ezcache"
repository = "https://github.com/javalsai/rs-ezcache"
documentation = "https://javalsai.github.io/rs-ezcache/"
readme = "README.md"
keywords = ["cache", "thread", "concurrency", "flexible"]
categories = ["caching", "concurrency"]

# I think dep versions could be relaxed more, but just to be safe
[dependencies]
ambassador = "0.4"
base64 = { version = "0.22", optional = true }
bincode = { version = "1.3", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
sha2 = { version = "0.10", optional = true }

[features]
std = []
thread-safe = ["std", "nightly"]
file-stores = [
    "std",
    "thread-safe",

    "dep:base64",
    "dep:bincode",
    "dep:serde",
    "dep:sha2",
]
nightly = []
default = ["std", "thread-safe", "file-stores"]

[dev-dependencies]
indicatif = "0.17.9"
rand = "0.8"
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3.15"
